# search-algorithms

./: README.md  graphs.py  pyproject.toml  test.py  visuals.py
search/: a_star.py  binary.py  dijkstra.py  dijkstra_queue.py  errors.py  graphs.py  search.py  test.py
